# draftsmith_rs_qt

./: .gitignore  README.md  app_config.py  app_types.py  justfile  main.py  note_app.py  pyproject.toml  requirements.txt
api/: client.py
docs/: Implementing_command_palette.md  Implementing_save_menu_item.md  how_the_save_refresh_works.md  how_to_create_command_palette.md  how_to_create_tabs_in_pyside6.md  how_to_redirect_webengine_links_into_actions_and_signals.md
docs/self/: current_app.md  log.md
draftsmith_qt/: app_config.py  main.py
draftsmith_qt/models/: note.py  notes_model.py  selection_data.py
draftsmith_qt/notes/: how_to_write_qt_sidebar_tree_with_vim_bindings.md
draftsmith_qt/static/: markdown.css  static.qrc
models/: navigation_model.py  note.py  notes_model.py  notes_tree_model.py  selection_data.py
resources/: markdown.css  styles.qrc
static/: manifest.json  markdown.css
ui/: actions_manager.py  menu_handler.py  menu_manager.py  tab_handler.py  toolbar_manager.py
utils/: key_constants.py  ngram_filter.py
widgets/: command_palette.py  css_resources_rc.py  insert_link_palette.py  js_resources_rc.py  katex_fonts_rc.py  katex_resources_rc.py  left_sidebar.py  main_content.py  main_window.py  markdown_editor.py  navigable_list.py  navigable_tree.py  note_id_link_insert.py  note_select_palette.py  notes_tree.py  notes_tree_delegate.py  notes_tree_view.py  palette_populated_with_notes.py  popup_palette.py  resources_rc.py  right_sidebar.py  search_sidebar.py  static_resources_rc.py  tab_content.py  tab_widget.py  tags_tree.py
(+65 files in other folders)
